[gd_scene load_steps=5 format=3 uid="uid://dqnonb3eyynto"]

[ext_resource type="Script" uid="uid://ducp6unuvdagk" path="res://scripts/character_base.gd" id="1_mx1f8"]
[ext_resource type="Texture2D" uid="uid://ptpg2b08b5jr" path="res://assets/sprites/peer.png" id="2_n45ic"]

[sub_resource type="BoxShape3D" id="BoxShape3D_psumi"]
size = Vector3(1, 2.1558228, 0.45410156)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_f35ln"]
height = 1.2956543
radius = 0.59277344

[node name="CharacterBase" type="RigidBody3D"]
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource("1_mx1f8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.076197, 0)
shape = SubResource("BoxShape3D_psumi")

[node name="SpriteContainer" type="Node3D" parent="."]

[node name="Sprite3D" type="Sprite3D" parent="SpriteContainer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9416977, 0)
texture = ExtResource("2_n45ic")

[node name="GroundRayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1404779, 0)
target_position = Vector3(0, -0.2, 0)

[node name="ChargeReboundArea3D" type="Area3D" parent="."]

[node name="CollisionShape3D2" type="CollisionShape3D" parent="ChargeReboundArea3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0675049, 0)
shape = SubResource("CylinderShape3D_f35ln")
